Mar 09, 2020
  protein domains: improved logging of exceptions

Feb 17, 2020
  protein domains: simplified gff3 generation and loading for all species

Feb 14, 2020
  agr: updated to latest 1.0.1.0 AGR spec

Feb 06, 2020
  gene files: code redone to process gene assemblies as specified in the app property file

Jan 31, 2020
  fasta preprocessor updated to preprocess scaffold reference sequence for 'naked mole rat'

Jan 24, 2020
  gene files: added generation of files for vervet (green monkey)

Jan 17, 2020
  added loading of promoter gff3 files into JBrowse

Jan 08, 2020
  generation of gff3 files for all promoters in RGD

Nov 26, 2019
  qtls: condensed summary emails into one

Nov 14, 2019
  agr: fixed code

Nov 11, 2019
  agr: fixed script

Nov 04, 2019
  protein domains: only generates gff3 file if there is any data for given assembly

Oct 30, 2019
  protein domains: extended to handle non-primary assemblies

Oct 28, 2019
  ontologies: fix NullPointerException for genes without names

Oct 25, 2019
  gene files: generate only one file for all chromosomes

Oct 18, 2019
  disease and chebi ontology tracks:
    generates only one file for all chromosomes
    DO terms that should processed must be in 'RGD_JBrowse_slim'
    uses merged-gene-descriptions if available
    fixed detection of obsolete ontology files
    added generation of disease/chebi tracks for chnonchilla, bonobo, squirrel, pig and dog

Oct 1, 2019
  AGR gff3 files:
    - gff3 fields 'ID:' and 'Parent:' are now set to RGD IDS for genes
    - 'protein_id' field set to protein RefSeq acc is emitted for protein coding transcripts
    - UniGene ids removed from emitted xdb ids

Sep 25, 2019
  genes module: added 'biological-region' to list of handled gene types (occurs for mouse genes)

Sep 24, 2019
  added gff3 generator for protein domains

ver 1.4.18, Jun 6, 2019
  gff3 for genes generator: optimized logging and parallelized code

ver 1.4.17, Mar 5, 2019